add config auto_rotate_interacting

--- a/common/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/common/src/main/resources/assets/minecraft/lang/en_us.json
@@ -1,54 +1,56 @@
 {
 	"leawind_third_person.text.title": "Leawind's Third Person",
-	"leawind_third_person.text.description": "Provides a better third-person perspective",
+	"leawind_third_person.text.description": "Provides a better third-person perspective.",
 	"leawind_third_person.option_category.common": "Common",
-	"leawind_third_person.option_category.common.desc": "Some common configurations",
+	"leawind_third_person.option_category.common.desc": "Some common configurations.",
 	"leawind_third_person.option_category.camera_offset": "Camera Offset",
-	"leawind_third_person.option_category.camera_offset.desc": "Adjust player position on the screen and other parameters. You don't need to manually adjust options on this page, as you can hold Z in the game and use the mouse to adjust.",
+	"leawind_third_person.option_category.camera_offset.desc": "Adjust parameters like player position on the screen. You don't need to manually adjust options on this page, as you can hold Z in the game and use the mouse to adjust.",
 	"leawind_third_person.option_category.smooth_factors": "Smooth Factors",
-	"leawind_third_person.option_category.smooth_factors.desc": "Smooth factors determine the smoothness of the smoothing effect. A smooth factor of 0 is equivalent to no smoothing, i.e., reaching the target value immediately. 1 is equivalent to infinite smoothness, i.e., never reaching the target value.",
+	"leawind_third_person.option_category.smooth_factors.desc": "Smooth factors determine the smoothness of the smoothing effect. A smooth factor of 0 is equivalent to no smoothing, reaching the target value immediately. 1 is equivalent to infinite smoothness, never reaching the target value.",
 	"leawind_third_person.option_category.misc": "Miscellaneous",
 	"leawind_third_person.option_category.misc.desc": "",
 	"leawind_third_person.option_group.camera_distance_adjustment": "Camera Distance Adjustment",
-	"leawind_third_person.option_group.camera_distance_adjustment.desc": "Adjust the camera distance to the player with the scroll wheel when holding specific keys in third-person mode. Set the adjustment range here.",
+	"leawind_third_person.option_group.camera_distance_adjustment.desc": "Adjust the camera distance to the player by scrolling the mouse wheel when in third person. Here, you can set the adjustment range.",
 	"leawind_third_person.option_group.normal_mode": "Normal Mode",
-	"leawind_third_person.option_group.normal_mode.desc": "When not aiming",
+	"leawind_third_person.option_group.normal_mode.desc": "When not aiming.",
 	"leawind_third_person.option_group.aiming_mode": "Aiming Mode",
-	"leawind_third_person.option_group.aiming_mode.desc": "When aiming with bow, crossbow, spear, etc.",
+	"leawind_third_person.option_group.aiming_mode.desc": "When aiming with bows, crossbows, spears, etc.",
 	"leawind_third_person.option_group.crosshair": "Third Person Crosshair",
 	"leawind_third_person.option_group.crosshair.desc": "",
 	"leawind_third_person.option_group.player_rotation": "Player Rotation",
 	"leawind_third_person.option_group.player_rotation.desc": "",
 	"leawind_third_person.option_group.player_fade_out": "Player Fade Out",
-	"leawind_third_person.option_group.player_fade_out.desc": "Make the player fade out in cramped spaces to avoid obstructing the view.",
-	"leawind_third_person.option_group.adjusting_camera": "Adjusting camera",
-	"leawind_third_person.option_group.adjusting_camera.desc": "By default hold Z to adjust camera's offset and distance to player.",
-	"leawind_third_person.option.is_mod_enable": "Is this mod enabled",
-	"leawind_third_person.option.is_mod_enable.desc": "Disabling will show the original third-person perspective but still allow opening the configuration screen with a key.",
+	"leawind_third_person.option_group.player_fade_out.desc": "Make the player fade out in confined spaces to avoid obstructing the view.",
+	"leawind_third_person.option_group.adjusting_camera": "Adjusting Camera",
+	"leawind_third_person.option_group.adjusting_camera.desc": "By default, holding Z allows you to use the mouse to adjust the camera's offset and distance.",
+	"leawind_third_person.option_group.behavior_interacting": "Player Rotation during Interaction",
+	"leawind_third_person.option_group.behavior_interacting.desc": "How the player rotates when pressing the interact key (attack, use, select).",
+	"leawind_third_person.option.is_mod_enable": "Is this mod enabled?",
+	"leawind_third_person.option.is_mod_enable.desc": "Disabling this will show the original third-person perspective, but you can still open the configuration screen with a key.",
 	"leawind_third_person.option.player_fade_out_enabled": "Enable Player Fade Out",
-	"leawind_third_person.option.player_fade_out_enabled.desc": "Not actually 'fading out,' just suddenly becoming invisible to avoid obstructing the view.",
+	"leawind_third_person.option.player_fade_out_enabled.desc": "Not actually 'fade out,' just suddenly invisible to avoid obstructing the view.",
 	"leawind_third_person.option.lock_camera_pitch_angle": "Lock Camera Pitch Angle",
-	"leawind_third_person.option.lock_camera_pitch_angle.desc": "Cannot pitch up or down when locked.",
-	"leawind_third_person.option.player_rotate_with_camera_when_not_aiming": "Force Player Rotation with Camera When Not Aiming",
-	"leawind_third_person.option.player_rotate_with_camera_when_not_aiming.desc": "Force player view to parallel with the camera when not aiming.",
+	"leawind_third_person.option.lock_camera_pitch_angle.desc": "After locking, you cannot tilt the camera up or down.",
+	"leawind_third_person.option.player_rotate_with_camera_when_not_aiming": "Force Player to Rotate with Camera When Not Aiming",
+	"leawind_third_person.option.player_rotate_with_camera_when_not_aiming.desc": "Force the player's line of sight to parallel the camera's line of sight when not aiming.",
 	"leawind_third_person.option.rotate_to_moving_direction": "Automatically Rotate Player to Moving Direction",
-	"leawind_third_person.option.rotate_to_moving_direction.desc": "Automatically rotate the player toward the direction of movement.",
-	"leawind_third_person.option.render_crosshair_when_aiming": "Show Crosshair When Aiming",
-	"leawind_third_person.option.render_crosshair_when_aiming.desc": "Display crosshair when in aiming mode.",
-	"leawind_third_person.option.render_crosshair_when_not_aiming": "Show Crosshair When Not Aiming",
-	"leawind_third_person.option.render_crosshair_when_not_aiming.desc": "Display crosshair when not in aiming mode.",
+	"leawind_third_person.option.rotate_to_moving_direction.desc": "Automatically rotate the player towards the direction of movement.",
+	"leawind_third_person.option.render_crosshair_when_aiming": "Show Crosshair when Aiming",
+	"leawind_third_person.option.render_crosshair_when_aiming.desc": "Display a crosshair in aiming mode.",
+	"leawind_third_person.option.render_crosshair_when_not_aiming": "Show Crosshair when Not Aiming",
+	"leawind_third_person.option.render_crosshair_when_not_aiming.desc": "Display a crosshair in non-aiming mode.",
 	"leawind_third_person.option.available_distance_count": "Available Distance Count",
-	"leawind_third_person.option.available_distance_count.desc": "Adjust the camera-to-player distance with the mouse scroll wheel. This option represents the number of distance levels.",
+	"leawind_third_person.option.available_distance_count.desc": "Adjust the camera-to-player distance using the mouse wheel. This option represents the number of distance levels.",
 	"leawind_third_person.option.camera_distance_min": "Minimum Distance",
-	"leawind_third_person.option.camera_distance_min.desc": "Minimum camera-to-player distance when adjusting with the scroll wheel. Player entity becomes invisible at the minimum distance if this feature is enabled.",
+	"leawind_third_person.option.camera_distance_min.desc": "Minimum camera-to-player distance when using the mouse wheel to adjust. The player entity becomes invisible at this minimum distance (if this feature is enabled).",
 	"leawind_third_person.option.camera_distance_max": "Maximum Distance",
-	"leawind_third_person.option.camera_distance_max.desc": "Maximum camera-to-player distance when adjusting with the scroll wheel.",
+	"leawind_third_person.option.camera_distance_max.desc": "Maximum camera-to-player distance when using the mouse wheel to adjust.",
 	"leawind_third_person.option.flying_smooth_factor": "Flying Smooth Factor",
 	"leawind_third_person.option.flying_smooth_factor.desc": "",
-	"leawind_third_person.option.adjusting_camera_offset_smooth_factor": "Adjusting Camera Offset Smooth Factor",
-	"leawind_third_person.option.adjusting_camera_offset_smooth_factor.desc": "Smooth factor for the camera offset adjustments as the camera moves with mouse changes.",
-	"leawind_third_person.option.adjusting_distance_smooth_factor": "Adjusting Camera Distance Smooth Factor",
-	"leawind_third_person.option.adjusting_distance_smooth_factor.desc": "Smooth factor for the camera-to-player distance adjustments as the camera moves with mouse wheel scrolling.",
+	"leawind_third_person.option.adjusting_camera_offset_smooth_factor": "Smooth Factor for Adjusting Camera Offset",
+	"leawind_third_person.option.adjusting_camera_offset_smooth_factor.desc": "Smooth factor for changes in camera offset as the mouse moves during camera adjustment.",
+	"leawind_third_person.option.adjusting_distance_smooth_factor": "Smooth Factor for Adjusting Distance",
+	"leawind_third_person.option.adjusting_distance_smooth_factor.desc": "Smooth factor for changes in camera-to-player distance as the mouse wheel scrolls during camera adjustment.",
 	"leawind_third_person.option.smooth_factor_horizon": "Horizontal Smooth Factor",
 	"leawind_third_person.option.smooth_factor_horizon.desc": "",
 	"leawind_third_person.option.smooth_factor_vertical": "Vertical Smooth Factor",
@@ -56,22 +58,28 @@
 	"leawind_third_person.option.camera_offset_smooth_factor": "Camera Offset Smooth Factor",
 	"leawind_third_person.option.camera_offset_smooth_factor.desc": "",
 	"leawind_third_person.option.distance_smooth_factor": "Distance Smooth Factor",
-	"leawind_third_person.option.distance_smooth_factor.desc": "Smooth factor for the change in distance between the camera and player when the player is stationary, changing to the target distance.",
+	"leawind_third_person.option.distance_smooth_factor.desc": "When the player is stationary, the change in distance between the camera and the player is a smooth factor of the target distance.",
 	"leawind_third_person.option.max_distance": "Maximum Camera-to-Player Distance",
 	"leawind_third_person.option.max_distance.desc": "",
 	"leawind_third_person.option.offset_x": "X Offset",
 	"leawind_third_person.option.offset_x.desc": "",
 	"leawind_third_person.option.offset_y": "Y Offset",
 	"leawind_third_person.option.offset_y.desc": "",
-	"leawind_third_person.option.offset_center": "Y Offset When Centered",
-	"leawind_third_person.option.offset_center.desc": "Press and hold a specific key to center. When centered, X offset is fixed at 0, and the player is in the center of the screen. This option adjusts the Y offset in this state.",
+	"leawind_third_person.option.offset_center": "Y Offset when Centered",
+	"leawind_third_person.option.offset_center.desc": "Long-press a specific key to center the player. When centered, X offset is fixed at 0, and the player is in the middle of the screen. This option adjusts the Y offset in this centered state.",
 	"leawind_third_person.option.camera_ray_trace_length": "Camera Ray Trace Length",
-	"leawind_third_person.option.camera_ray_trace_length.desc": "When aiming at an object beyond this distance, player view will parallel the camera view.",
-	"leawind_third_person.option.turn_with_camera_when_enter_first_person": "Player Turns with Camera When Entering First Person",
-	"leawind_third_person.option.turn_with_camera_when_enter_first_person.desc": "When entering first-person view, make the player face the same direction as the camera in the just-ended third-person view.",
-	"leawind_third_person.option.projectile_auto_aim": "Auto-Aim when Shooting",
-	"leawind_third_person.option.projectile_auto_aim.desc": "When aiming at a block or entity, automatically adjust the shooting angle to hit the target.",
-	"key.categories.leawind_third_person": "Leawind's Third Person",
+	"leawind_third_person.option.camera_ray_trace_length.desc": "When aiming at an object beyond this distance, the player's line of sight becomes parallel to the camera's line of sight.",
+	"leawind_third_person.option.auto_rotate_interacting": "Auto-Rotate During Interaction",
+	"leawind_third_person.option.auto_rotate_interacting.desc": "The player will automatically rotate when pressing the interact key (attack, use, select).",
+	"leawind_third_person.option.rotate_interacting_type": "Rotation Type During Interaction",
+	"leawind_third_person.option.rotate_interacting_type.desc": "",
+	"leawind_third_person.option.rotate_interacting_type.turn_to_crosshair": "Turn to Crosshair",
+	"leawind_third_person.option.rotate_interacting_type.turn_with_camera": "Turn with Camera Orientation",
+	"leawind_third_person.option.turn_with_camera_when_enter_first_person": "Turn Player with Camera Orientation when Entering First Person",
+	"leawind_third_person.option.turn_with_camera_when_enter_first_person.desc": "When entering first-person view, make the player face in the same direction as the camera in the just-ended third-person view.",
+	"leawind_third_person.option.projectile_auto_aim": "Auto-Aim While Shooting",
+	"leawind_third_person.option.projectile_auto_aim.desc": "Automatically adjust the shooting angle to hit the target when aiming at blocks or entities.",
+	"key.categories.leawind_third_person": "Leawind Third Person",
 	"key.leawind_third_person.open_config_menu": "Open Configuration Menu",
 	"key.leawind_third_person.toggle_mod_enable": "Toggle Mod Enable",
 	"key.leawind_third_person.toggle_side": "Toggle Camera to the Other Side",
