--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -23,8 +23,8 @@
 	"leawind_third_person.option_group.player_fade_out.desc": "狭小空间内让玩家淡出，避免遮挡视线。",
 	"leawind_third_person.option_group.adjusting_camera": "调整相机",
 	"leawind_third_person.option_group.adjusting_camera.desc": "默认按住Z可以用鼠标调节相机的偏移量和远近。",
-	"leawind_third_person.option_group.behavior_interecting": "#TODO 交互时玩家转动方式",
-	"leawind_third_person.option_group.behavior_interecting.desc": "当按下交互键（攻击|使用|选取）时，玩家如何转动",
+	"leawind_third_person.option_group.behavior_interacting": "交互时玩家转动方式",
+	"leawind_third_person.option_group.behavior_interacting.desc": "当按下交互键（攻击|使用|选取）时，玩家如何转动",
 	"leawind_third_person.option.is_mod_enable": "本模组是否启用",
 	"leawind_third_person.option.is_mod_enable.desc": "禁用后将显示原版第三人称视角，但仍可以按键打开配置屏幕",
 	"leawind_third_person.option.player_fade_out_enabled": "启用玩家淡出",
@@ -69,6 +69,12 @@
 	"leawind_third_person.option.offset_center.desc": "长按特定按键可以居中，居中状态下X偏移固定为0，玩家处于屏幕中间。本选项可以调整此时的Y偏移。",
 	"leawind_third_person.option.camera_ray_trace_length": "相机视线探测距离",
 	"leawind_third_person.option.camera_ray_trace_length.desc": "当瞄准的物体超过这个距离时，玩家视线会和相机视线平行",
+	"leawind_third_person.option.auto_rotate_interacting": "交互时自动转身",
+	"leawind_third_person.option.auto_rotate_interacting.desc": "当按下交互键（攻击|使用|选取）时，玩家会自动转身",
+	"leawind_third_person.option.rotate_interacting_type": "转身方式",
+	"leawind_third_person.option.rotate_interacting_type.desc": "",
+	"leawind_third_person.option.rotate_interacting_type.turn_to_crosshair": "转向准星",
+	"leawind_third_person.option.rotate_interacting_type.turn_with_camera": "与相机朝向相同",
 	"leawind_third_person.option.turn_with_camera_when_enter_first_person": "进入第一人称时玩家转向相机朝向",
 	"leawind_third_person.option.turn_with_camera_when_enter_first_person.desc": "进入第一人称视角时，让玩家面向刚刚结束的第三人称视角中相机的相同方向。",
 	"leawind_third_person.option.projectile_auto_aim": "射击时自动瞄准",
