--- a/common/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/common/src/main/resources/assets/minecraft/lang/en_us.json
@@ -37,6 +37,8 @@
 	"leawind_third_person.option.player_rotate_with_camera_when_not_aiming.desc": "Force the player's line of sight to parallel the camera's line of sight when not aiming.",
 	"leawind_third_person.option.rotate_to_moving_direction": "Automatically Rotate Player to Moving Direction",
 	"leawind_third_person.option.rotate_to_moving_direction.desc": "Automatically rotate the player towards the direction of movement.",
+	"leawind_third_person.option.auto_turn_body_drawing_a_bow": "Auto rotate body drawing a bow",
+	"leawind_third_person.option.auto_turn_body_drawing_a_bow.desc": "When drawing the bow, automatically turn sideways so that the hand holding the bow is in front and the hand pulling the string is behind.",
 	"leawind_third_person.option.render_crosshair_when_aiming": "Show Crosshair when Aiming",
 	"leawind_third_person.option.render_crosshair_when_aiming.desc": "Display a crosshair in aiming mode.",
 	"leawind_third_person.option.render_crosshair_when_not_aiming": "Show Crosshair when Not Aiming",
