add Config enable_buildin_aim_item_patterns

--- a/common/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/common/src/main/resources/assets/minecraft/lang/en_us.json
@@ -9,6 +9,8 @@
 	"leawind_third_person.option_category.smooth_factors.desc": "Smooth factors determine the smoothness of the smoothing effect. A smooth factor of 0 is equivalent to no smoothing, reaching the target value immediately. 1 is equivalent to infinite smoothness, never reaching the target value.",
 	"leawind_third_person.option_category.misc": "Miscellaneous",
 	"leawind_third_person.option_category.misc.desc": "",
+	"leawind_third_person.option_category.aiming_check": "Aiming Check",
+	"leawind_third_person.option_category.aiming_check.desc": "Rules for checking if it's aiming mode now",
 	"leawind_third_person.option_group.camera_distance_adjustment": "Camera Distance Adjustment",
 	"leawind_third_person.option_group.camera_distance_adjustment.desc": "Adjust the camera distance to the player by scrolling the mouse wheel when in third person. Here, you can set the adjustment range.",
 	"leawind_third_person.option_group.normal_mode": "Normal Mode",
@@ -85,6 +87,8 @@
 	"leawind_third_person.option.turn_with_camera_when_enter_first_person.desc": "When entering first-person view, make the player face in the same direction as the camera in the just-ended third-person view.",
 	"leawind_third_person.option.projectile_auto_aim": "Auto-Aim While Shooting",
 	"leawind_third_person.option.projectile_auto_aim.desc": "Automatically adjust the shooting angle to hit the target when aiming at blocks or entities.",
+	"leawind_third_person.option.enable_buildin_aim_item_patterns": "Enable Build-in aiming item patterns",
+	"leawind_third_person.option.enable_buildin_aim_item_patterns.desc": "If enable, will auto enter aiming mode when holding specific item",
 	"key.categories.leawind_third_person": "Leawind's Third Person",
 	"key.leawind_third_person.open_config_menu": "Open Configuration Menu",
 	"key.leawind_third_person.toggle_mod_enable": "Toggle Mod Enable",
