--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -9,6 +9,8 @@
 	"leawind_third_person.option_category.smooth_factors.desc": "平滑系数可以理解为平滑效果的平滑程度。平滑系数为0相当于没有平滑，也就是立即达到目标值。1相当于无限平滑，也就是永远不会达到目标值。",
 	"leawind_third_person.option_category.misc": "杂项",
 	"leawind_third_person.option_category.misc.desc": "",
+	"leawind_third_person.option_category.aiming_check": "瞄准检查",
+	"leawind_third_person.option_category.aiming_check.desc": "用于判断当前是否是瞄准模式的规则",
 	"leawind_third_person.option_group.camera_distance_adjustment": "相机距离调节",
 	"leawind_third_person.option_group.camera_distance_adjustment.desc": "第三人称下按住特定按键时可以用滚轮调整相机到玩家的距离。此处可以设置距离的调节范围。",
 	"leawind_third_person.option_group.normal_mode": "正常模式",
@@ -85,6 +87,8 @@
 	"leawind_third_person.option.turn_with_camera_when_enter_first_person.desc": "进入第一人称视角时，让玩家面向刚刚结束的第三人称视角中相机的相同方向。",
 	"leawind_third_person.option.projectile_auto_aim": "射击时自动瞄准",
 	"leawind_third_person.option.projectile_auto_aim.desc": "瞄准方块或实体时，自动调整射击角度以击中该目标",
+	"leawind_third_person.option.enable_buildin_aim_item_patterns": "启用内置瞄准物品匹配规则",
+	"leawind_third_person.option.enable_buildin_aim_item_patterns.desc": "启用后将在手持特定物品时自动进入瞄准状态。",
 	"key.categories.leawind_third_person": "Leawind的第三人称",
 	"key.leawind_third_person.open_config_menu": "打开配置菜单",
 	"key.leawind_third_person.toggle_mod_enable": "切换模组是否启用",
