--- a/common/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/common/src/main/resources/assets/minecraft/lang/en_us.json
@@ -89,12 +89,12 @@
 	"leawind_third_person.option.turn_with_camera_when_enter_first_person.desc": "When entering first-person view, make the player face in the same direction as the camera in the just-ended third-person view.",
 	"leawind_third_person.option.projectile_auto_aim": "Auto-Aim While Shooting",
 	"leawind_third_person.option.projectile_auto_aim.desc": "Automatically adjust the shooting angle to hit the target when aiming at blocks or entities.",
-	"leawind_third_person.option.enable_buildin_aim_item_rules": "Enable Build-in match rules",
-	"leawind_third_person.option.enable_buildin_aim_item_rules.desc": "Build-in rules include: bow, trident, charged crossbow, snowball, etc.",
-	"leawind_third_person.option.aim_item_rules": "Hand Item Match Rules",
-	"leawind_third_person.option.aim_item_rules.desc": "When the item player is holding matches any rule, auto enter aiming mode.",
-	"leawind_third_person.option.use_aim_item_rules": "Using Item Matching Rules",
-	"leawind_third_person.option.use_aim_item_rules.desc": "When the item player is using matches any rule, auto enter aiming mode.",
+	"leawind_third_person.option.enable_buildin_item_aiming_rules": "Enable Build-in match rules",
+	"leawind_third_person.option.enable_buildin_item_aiming_rules.desc": "Build-in rules include: bow, trident, charged crossbow, snowball, etc.",
+	"leawind_third_person.option.holding_item_aiming_rules": "Holding Item Matching Rules",
+	"leawind_third_person.option.holding_item_aiming_rules.desc": "When the item player is holding matches any rule, auto enter aiming mode.",
+	"leawind_third_person.option.using_item_aiming_rules": "Using Item Matching Rules",
+	"leawind_third_person.option.using_item_aiming_rules.desc": "When the item player is using matches any rule, auto enter aiming mode.",
 	"key.categories.leawind_third_person": "Leawind's Third Person",
 	"key.leawind_third_person.open_config_menu": "Open Configuration Menu",
 	"key.leawind_third_person.toggle_mod_enable": "Toggle Mod Enable",
