--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -89,12 +89,12 @@
 	"leawind_third_person.option.turn_with_camera_when_enter_first_person.desc": "进入第一人称视角时，让玩家面向刚刚结束的第三人称视角中相机的相同方向。",
 	"leawind_third_person.option.projectile_auto_aim": "射击时自动瞄准",
 	"leawind_third_person.option.projectile_auto_aim.desc": "瞄准方块或实体时，自动调整射击角度以击中该目标",
-	"leawind_third_person.option.enable_buildin_aim_item_rules": "启用内置匹配规则",
-	"leawind_third_person.option.enable_buildin_aim_item_rules.desc": "内置规则包括：弓、三叉戟、上弦的弩、雪球等",
-	"leawind_third_person.option.aim_item_rules": "手持物品匹配规则",
-	"leawind_third_person.option.aim_item_rules.desc": "当玩家左手或右手拿着的物品符合任意一条规则时，自动进入瞄准模式",
-	"leawind_third_person.option.use_aim_item_rules": "使用物品匹配规则",
-	"leawind_third_person.option.use_aim_item_rules.desc": "当玩家正在使用的物品符合任意一条规则时，自动进入瞄准模式",
+	"leawind_third_person.option.enable_buildin_item_aiming_rules": "启用内置匹配规则",
+	"leawind_third_person.option.enable_buildin_item_aiming_rules.desc": "内置规则包括：弓、三叉戟、上弦的弩、雪球等",
+	"leawind_third_person.option.holding_item_aiming_rules": "手持物品匹配规则",
+	"leawind_third_person.option.holding_item_aiming_rules.desc": "当玩家左手或右手拿着的物品符合任意一条规则时，自动进入瞄准模式",
+	"leawind_third_person.option.using_item_aiming_rules": "使用物品匹配规则",
+	"leawind_third_person.option.using_item_aiming_rules.desc": "当玩家正在使用的物品符合任意一条规则时，自动进入瞄准模式",
 	"key.categories.leawind_third_person": "Leawind的第三人称",
 	"key.leawind_third_person.open_config_menu": "打开配置菜单",
 	"key.leawind_third_person.toggle_mod_enable": "切换模组是否启用",
