--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -95,6 +95,8 @@
 	"leawind_third_person.option.hold_to_aim_item_pattern_expressions.desc": "当玩家左手或右手拿着的物品符合任意一条规则时，自动进入瞄准模式",
 	"leawind_third_person.option.use_to_aim_item_pattern_expressions": "使用时自动瞄准",
 	"leawind_third_person.option.use_to_aim_item_pattern_expressions.desc": "当玩家正在使用的物品符合任意一条规则时，自动进入瞄准模式",
+	"leawind_third_person.option.use_to_first_person_pattern_expressions": "使用时暂时进入第一人称",
+	"leawind_third_person.option.use_to_first_person_pattern_expressions.desc": "当玩家正在使用的物品符合任意一条规则时，暂时进入第一人称视角",
 	"key.categories.leawind_third_person": "Leawind的第三人称",
 	"key.leawind_third_person.open_config_menu": "打开配置菜单",
 	"key.leawind_third_person.toggle_mod_enable": "切换模组是否启用",
