--- a/common/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/common/src/main/resources/assets/minecraft/lang/en_us.json
@@ -34,7 +34,7 @@
 	"leawind_third_person.option.center_offset_when_flying": "Centered when flying",
 	"leawind_third_person.option.center_offset_when_flying.desc": "Use 0 camera offset when attached entity is flying with elytra",
 	"leawind_third_person.option.player_fade_out_enabled": "Enable Player Fade Out",
-	"leawind_third_person.option.player_fade_out_enabled.desc": "Not actually 'fade out,' just suddenly invisible to avoid obstructing the view.",
+	"leawind_third_person.option.player_fade_out_enabled.desc": "When the camera approaches the player, make player semi-transparent.",
 	"leawind_third_person.option.use_camera_pick_in_creative": "Use camera pick in creative mode",
 	"leawind_third_person.option.use_camera_pick_in_creative.desc": "In creative mode, player sight won't be blocked, you can interect with what crosshair aims at",
 	"leawind_third_person.option.lock_camera_pitch_angle": "Lock Camera Pitch Angle",
