--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -21,7 +21,7 @@
 	"leawind_third_person.option_group.crosshair.desc": "",
 	"leawind_third_person.option_group.player_rotation": "玩家转动",
 	"leawind_third_person.option_group.player_rotation.desc": "",
-	"leawind_third_person.option_group.player_fade_out": "玩家淡出",
+	"leawind_third_person.option_group.player_fade_out": "玩家半透明",
 	"leawind_third_person.option_group.player_fade_out.desc": "狭小空间内让玩家淡出，避免遮挡视线。",
 	"leawind_third_person.option_group.adjusting_camera": "调整相机",
 	"leawind_third_person.option_group.adjusting_camera.desc": "默认按住Z可以用鼠标调节相机的偏移量和远近。",
@@ -33,7 +33,7 @@
 	"leawind_third_person.option.is_third_person_mode.desc": "禁用则变成第一人称",
 	"leawind_third_person.option.center_offset_when_flying": "飞行时自动居中",
 	"leawind_third_person.option.center_offset_when_flying.desc": "当相机附着的实体正在使用鞘翅飞行时，不使用相机偏移量",
-	"leawind_third_person.option.player_fade_out_enabled": "启用玩家淡出",
+	"leawind_third_person.option.player_fade_out_enabled": "启用玩家半透明",
 	"leawind_third_person.option.player_fade_out_enabled.desc": "当相机靠近玩家时，让玩家变得半透明",
 	"leawind_third_person.option.use_camera_pick_in_creative": "创造模式下使用相机pick",
 	"leawind_third_person.option.use_camera_pick_in_creative.desc": "创造模式下玩家视线不会被遮挡，准星指哪就交互哪",
