--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -5,8 +5,8 @@
 	"leawind_third_person.option_category.general.desc": "一些常用的配置",
 	"leawind_third_person.option_category.camera_offset": "相机偏移",
 	"leawind_third_person.option_category.camera_offset.desc": "调整玩家在屏幕上的位置等参数。!你不需要手动调整此页的选项们，因为可以在游戏中按住Z后用鼠标调整。",
-	"leawind_third_person.option_category.smooth_factors": "平滑系数",
-	"leawind_third_person.option_category.smooth_factors.desc": "平滑系数可以理解为平滑效果的平滑程度。平滑系数为0相当于没有平滑，也就是立即达到目标值。1相当于无限平滑，也就是永远不会达到目标值。",
+	"leawind_third_person.option_category.smooth_halflife": "平滑系数",
+	"leawind_third_person.option_category.smooth_halflife.desc": "一些值的平滑程度。",
 	"leawind_third_person.option_category.misc": "杂项",
 	"leawind_third_person.option_category.misc.desc": "",
 	"leawind_third_person.option_category.aiming_check": "瞄准检查",
@@ -55,20 +55,20 @@
 	"leawind_third_person.option.camera_distance_min.desc": "使用滚轮调整时相机到玩家的最小距离。当处于最小距离时玩家实体会不可见（如果开启该功能）",
 	"leawind_third_person.option.camera_distance_max": "距离上限",
 	"leawind_third_person.option.camera_distance_max.desc": "使用滚轮调整时相机到玩家的最大距离",
-	"leawind_third_person.option.flying_smooth_factor": "飞行时相机跟随玩家的平滑系数",
-	"leawind_third_person.option.flying_smooth_factor.desc": "",
-	"leawind_third_person.option.adjusting_camera_offset_smooth_factor": "调整相机时偏移量的平滑系数",
-	"leawind_third_person.option.adjusting_camera_offset_smooth_factor.desc": "调整相机时，相机偏移量随鼠标变化的平滑系数",
-	"leawind_third_person.option.adjusting_distance_smooth_factor": "调整相机时距离平滑系数",
-	"leawind_third_person.option.adjusting_distance_smooth_factor.desc": "调整相机时，相机到玩家距离随鼠标滚轮的滚动而变化的平滑系数",
-	"leawind_third_person.option.smooth_factor_horizon": "水平平滑系数",
-	"leawind_third_person.option.smooth_factor_horizon.desc": "",
-	"leawind_third_person.option.smooth_factor_vertical": "垂直平滑系数",
-	"leawind_third_person.option.smooth_factor_vertical.desc": "",
-	"leawind_third_person.option.camera_offset_smooth_factor": "相机偏移平滑系数",
-	"leawind_third_person.option.camera_offset_smooth_factor.desc": "",
-	"leawind_third_person.option.distance_smooth_factor": "距离平滑系数",
-	"leawind_third_person.option.distance_smooth_factor.desc": "当玩家静止时，相机与玩家间的距离 变化为 目标距离 的平滑系数",
+	"leawind_third_person.option.flying_smooth_halflife": "飞行时相机跟随玩家的平滑系数",
+	"leawind_third_person.option.flying_smooth_halflife.desc": "",
+	"leawind_third_person.option.adjusting_camera_offset_smooth_halflife": "调整相机偏移量的平滑系数",
+	"leawind_third_person.option.adjusting_camera_offset_smooth_halflife.desc": "调整相机时，相机偏移量随鼠标移动而变化的平滑系数",
+	"leawind_third_person.option.adjusting_distance_smooth_halflife": "调整相机距离的平滑系数",
+	"leawind_third_person.option.adjusting_distance_smooth_halflife.desc": "调整相机距离时，相机到玩家距离变化的平滑系数",
+	"leawind_third_person.option.smooth_halflife_horizon": "水平平滑系数",
+	"leawind_third_person.option.smooth_halflife_horizon.desc": "",
+	"leawind_third_person.option.smooth_halflife_vertical": "垂直平滑系数",
+	"leawind_third_person.option.smooth_halflife_vertical.desc": "",
+	"leawind_third_person.option.camera_offset_smooth_halflife": "相机偏移平滑系数",
+	"leawind_third_person.option.camera_offset_smooth_halflife.desc": "",
+	"leawind_third_person.option.distance_smooth_halflife": "距离平滑系数",
+	"leawind_third_person.option.distance_smooth_halflife.desc": "相机远离玩家的时间",
 	"leawind_third_person.option.max_distance": "相机到玩家的最大距离",
 	"leawind_third_person.option.max_distance.desc": "",
 	"leawind_third_person.option.offset_x": "X偏移",
