--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -99,6 +99,8 @@
 	"leawind_third_person.option.turn_with_camera_when_enter_first_person.desc": "进入第一人称视角时，让玩家面向刚刚结束的第三人称视角中相机的相同方向。",
 	"leawind_third_person.option.projectile_auto_aim": "射击时自动瞄准",
 	"leawind_third_person.option.projectile_auto_aim.desc": "瞄准方块或实体时，自动调整射击角度以击中该目标",
+	"leawind_third_person.option.determine_aim_mode_by_animation": "通过动画判断瞄准模式",
+	"leawind_third_person.option.determine_aim_mode_by_animation.desc": "当相机实体播放特定动画时，自动进入瞄准模式",
 	"leawind_third_person.option.hold_to_aim_item_pattern_expressions": "手持时自动瞄准",
 	"leawind_third_person.option.hold_to_aim_item_pattern_expressions.desc": "当玩家左手或右手拿着的物品符合任意一条规则时，自动进入瞄准模式",
 	"leawind_third_person.option.use_to_aim_item_pattern_expressions": "使用时自动瞄准",
